# VMware-AIops

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  SECURITY.md  SKILL.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
codex-skill/: AGENTS.md  SKILL.md
docs/integrations/: continue.md  cursor.md  goose.md  localcowork.md  mcp-agent.md  vscode-copilot.md
docs/plans/: 2026-03-09-plan-apply-design.md
examples/: deploy.yaml  ollama-local-setup.md
examples/mcp-configs/: README.md  continue.yaml  cursor.json  goose.json  localcowork.json  mcp-agent.yaml  vscode-copilot.json
gemini-extension/: GEMINI.md  gemini-extension.json
kimi-skill/: SKILL.md
mcp_server/: __init__.py  _shared.py  server.py
mcp_server/tools/: network.py  summary.py  ttl.py  vm.py
skill/: SKILL.md
skills/vmware-aiops/: SKILL.md
skills/vmware-monitor/: SKILL.md
tests/: test_cluster_mgmt_sanitize.py  test_config.py  test_drs_rules.py  test_host_network_mgmt.py  test_hub_routing.py  test_init_and_onboarding.py  test_network_mgmt.py  test_no_destructive_ops.py  test_safe_error_passthrough.py
trae-rules/: project_rules.md
vmware-monitor/: SKILL.md
vmware_aiops/: __init__.py  _fsutil.py  cli.py  config.py  connection.py  doctor.py  init_wizard.py
vmware_aiops/cli/: _common.py  _root.py  alarm.py  cluster.py  deploy.py  doctor.py  hub.py  investigate.py  mcp_config.py  plan.py  scan.py  summary.py  vm.py
vmware_aiops/mcp_server/: _shared.py  server.py
vmware_aiops/notify/: __init__.py  audit.py  logger.py  webhook.py
vmware_aiops/ops/: __init__.py  alarm_mgmt.py  cluster_mgmt.py  datastore_browser.py  guest_ops.py  health.py  host_network_mgmt.py  inventory.py  iscsi_config.py  network_mgmt.py  plan_executor.py  planner.py  ttl.py  (+2 more)
(+32 files in other folders)
